--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
 	</nav>
 
 		<div class="container">
-			<div class="" ng-view></div>
+			<div class="" ui-view></div>
 		</div>
 
 		<!-- jQuery -->
@@ -72,7 +72,8 @@
 		<script src="app/controllers/mainController.js"></script>
 		<script src="app/controllers/userCtrl.js"></script>
 		<script src="app/controllers/storyCtrl.js"></script>
-
+		
+		<script src="libs/angular-ui-route.min.js"></script>
 		<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 
 	</body>
