--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 
 	</head>
 	<body layout="row" ng-controller="MainController">
-		
+
 		<md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z3 md-navigation-drawer" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')">
 			<md-toolbar layout="row" layout-align="center center" ng-if="loggedIn == true">
 				<span flex></span>
@@ -46,42 +46,47 @@
 					<div class="md-list-item-text">
 						<span class="md-body-2">{{item.title}}</span>
 					</div>
-			 	</md-list-item> 
+			 	</md-list-item>
 			 	<md-list-item class="md-2-line" role="link" ng-click="toggleSidenav('left')" ng-href="#/login" ng-if="!loggedIn">
 					<md-icon md-svg-icon="action:ic_lock_24px" aria-label="Login"></md-icon>
 					<div class="md-list-item-text">
 						<span class="md-body-2">Login</span>
 					</div>
-			 	</md-list-item> 
+			 	</md-list-item>
 			 	<md-list-item class="md-2-line" role="link" ng-click="toggleSidenav('left')" ng-href="#/singup" ng-if="!loggedIn">
 					<md-icon md-svg-icon="action:ic_perm_identity_24px" aria-label="Singup"></md-icon>
 					<div class="md-list-item-text">
 						<span class="md-body-2">Singup</span>
 					</div>
-			 	</md-list-item> 
+			 	</md-list-item>
 
 			</md-list>
 		</md-sidenav>
 
-			<div layout="row" ui-view></div>
+			<div layout="row" flex layout-padding ui-view></div>
 
 
 		<!-- jQuery -->
 		<script src="//code.jquery.com/jquery.js"></script>
 
 		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+
 		<script src="https://code.angularjs.org/1.5.0/angular-route.min.js" charset="utf-8"></script>
 		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script>
 		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>
 		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
 
+		<script src="https://cdn.jsdelivr.net/lodash/4.6.1/lodash.min.js"></script>
+		<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/restangular/1.3.1/restangular.min.js"></script>
+		<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
+
 		<!-- Angular Material Library -->
 		<script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
-		
+
 		<script src="socket.io/socket.io.js" charset="utf-8"></script>
 
 		<script src="app/directives/reverse.js"></script>
-		
+
 		<script src="app/app.js"></script>
 		<script src="app/services/service.js"></script>
 		<script src="app/services/user.js"></script>
@@ -89,7 +94,7 @@
 		<script src="app/controllers/mainController.js"></script>
 		<script src="app/controllers/userCtrl.js"></script>
 		<script src="app/controllers/storyCtrl.js"></script>
-		
+
 		<script src="libs/angular-ui-route.min.js"></script>
 		<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 
